cart,헤더,시큐리티,로그인타입,상품상세,홈컨트롤러,멤버디테일서비스 수정
cart : 기능 (수량 + -), (삭제) 추가 및 repo로 db에 실제로 기입.
header : cart 매핑 "장바구니" 추가, login Type이 ADMIN일때 상품등록 추가
시큐 : 로그아웃url "/" 에서 "/main"으로 바꿈
로그인타입 : admin 추가
디테일 html 수정 : 장바구니 담기와 단건결제 카카오페이만 남기고 바로결제 삭제
홈컨트롤러 : 로그아웃 url "redirect:/" 에서 "redirect:/main";로 수정
멤버 디테일 서비스 : authorities ("ROLE_ADMIN")추가